# Botty-McTurtleface

./: CMakeLists.txt  README.md  package.xml
arm/: CMakeLists.txt  README.md  named_pose.py  package.xml  pose_command.py  topic_pose.py
arm/nodes/: arm_control.py
camera/: CMakeLists.txt  README.md  package.xml
camera/auswertung/: Konfusionsmatrix.xlsx
camera/launch/: camera.launch
camera/src/: action_controller.cpp  camera_controller.cpp
camera/srv/: FindObjects.srv
control/: package.xml
control/launch/: arm_control.launch  base_control.launch
control/nodes/: arm_control.py  base_control.py
controller/: CMakeLists.txt  README.md  package.xml
controller/launch/: arm_control.launch  base_control.launch  minimal_with_hokuyo.launch
controller/msg/: Command.msg  Entity.msg
controller/nodes/: Botty.py  arm_control.py  base_control.py  base_control.py.save  control.py  control.py.backup
hokuyoInterpreter/: CMakeLists.txt  package.xml  readMe.txt
hokuyoInterpreter/scripts/: config.xml  hokuyoInterpreter.py
lidar/: CMakeLists.txt  README.md  package.xml
lidar/msg/: Hints.msg
lidar/scripts/: config.xml  hokuyoInterpreter.py
lidar/srv/: HintsService.srv
motor/: CMakeLists.txt  README.md  package.xml
motor/scripts/: motor.py  motorService.py
motor/srv/: call.srv
parser/: CMakeLists.txt  package.xml
parser/config/: botty.gram  botty.kwlist  botty_more.gram  voice_cmd.kwlist
parser/launch/: continuous.launch  keyword_recognition.launch  parser.launch  recognizer.launch
parser/nodes/: asr_test.py  (+4 more)
speech/: README.md  package.xml
(+10 files in other folders)
